--- a/Gallery.html
+++ b/Gallery.html
@@ -4,7 +4,8 @@
 		<meta charset="UTF-8">
 		<title>Caravan Palace</title>
 		<link rel="stylesheet" type="text/css" href="Galstyle.css">
-	</head>
+		<!-- <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Roboto+Slab&display=swap" rel="stylesheet"> 
+	</head> -->
 	<body>
 		<header>
 			<img class="logo" src="index_files/CaravanLogo.png">
@@ -34,8 +35,8 @@
 							</a>
 						</li>
 						<li class="navi">
-							<a class="but" href="#">
-								<div class="data-col">Видео</div>
+							<a class="but" href="info_about.html">
+								<div class="data-col">О нас</div>
 							</a>
 						</li>
 					</ul>
