--- a/info_about.html
+++ b/info_about.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Caravan Palace</title>
-		<link rel="stylesheet" type="text/css" href="ramstyle.css">
-		<!-- <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Roboto+Slab&display=swap" rel="stylesheet">  -->
-	</head>
+		<link rel="stylesheet" type="text/css" href="infstyle.css">
+		<!-- <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Roboto+Slab&display=swap" rel="stylesheet"> 
+ -->	</head>
 	<body>
 		<header>
 			<img class="logo" src="index_files/CaravanLogo.png">
@@ -44,24 +44,9 @@
 			</div>
 		</div>
 		<div class="content">			
-			<div class="slide">
-				<input type="radio" name="slider" id="slider1" checked="checked">
-				<label for="slider1"></label>
-				<div><p><!-- Пример №1. --></p> <img src="Content/123456.jpg"></div>
-
-				<label for="slider2"></label>
-				<input type="radio" name="slider" id="slider2">
-				<label for="slider2"></label>
-				<div><p><!-- Пример №2. --></p> <img src="Content/3214.jpg"></div>
-
-				<label for="slider3"></label>
-				<input type="radio" name="slider" id="slider3">
-				<label for="slider3"></label>
-				<div><p><!-- Пример №3. --></p> <img src="Content/123.jpg"></div>
-			</div>
 			<div class="border">
 				<div class="texts">
-					<img class="image1" src="index_files/R-8046368-1454108735-5686.png">Caravan Palace — французская музыкальная группа, играющая в жанре 
+					Caravan Palace — французская музыкальная группа, играющая в жанре 
 					электро-свинг. В настоящее время в состав группы входят: Sonia Fernandez
 					Velasco (вокал и кларнет), Arnaud Vial (гитара), Hugues Payen 
 					(скрипка), Camille Chapelière (кларнет), Charles Delaporte (контрабас) и
@@ -71,24 +56,52 @@
 					года компанией Wagram Music был выпущен дебютный альбом группы — Caravan
 					Palace. Запись появилась в чартах Швейцарии, Бельгии и Франции и 
 					достигла 11 места.
+					<p>
+						Впервые члены группы встретились в 2005 году
+						Группа была создана через год после встречи с музыкальным продюсером Loïc Barrouk,
+						он проявил интерес к этому проекту, зарегистрировав 
+						группу в звукозаписывающей студии и организовав несколько концертов.
+					</p>
+					<p>
+						Группа получила популярность 
+						в интернете благодаря нескольким демо и промозаписям. С 2006 по 2007 год 
+						они провели в концертном туре по Франции, также в 2007 году они впервые выступили на музыкальном фестивале, 
+						это был Django Reinhardt Jazz Festival. После этого в Парижской студии звукозаписи 
+						Wagram Music группа записала свой первый альбом.
+					</p>
+					20 октября 2008 года альбом, названый Caravan Palace, был выпущен. Альбом получил признание for its traditional jazz inclinations и был включен в некоторые европейские чарты. В Швейцарии альбом занял 72 место, в Бельгии 42. Альбом стал лучшей отечественной группой Франции и занял 11 место в августе 2009 года и оставался во Французском национальном чарте альбомов (Syndicat National de l'Édition Phonographique) на протяжении 69 недель.
+					<p>
+						Группа выпустила второй официальный сингл "Suzy" 24 февраля 2009 года.
+					</p>
+					После более чем годичного перерыва 3 октября 2011 года у них вышел мини-альбом Clash. А 5 марта 2012 года группа выпускает второй студийный альбом Panic.
+					<p>
+						19 июня 2019 на своей официальной странице YouTube группа опубликовала тизер нового альбома "Chronologic", выход которого состоялся 30 августа 2019. 
+					</p>
 				</div>
 			</div>
-			<h1>Состав</h1>	
+			<h1>Состав группы</h1>	
 			<div class="Tbl">
 				<table>
 					<tr class="Tr1">
 						<td class="Td1">
 							<div class="Cell">
-								<div class="imgT"><img src="Content/6.jpg"></div>
+								<div class="imgT">
+									<img src="Content/6.jpg">
+								</div>
 								<div class="info">
 									<h1>Colotis Zoé</h1>
 									<p>Вокал и кларнет</p>
+								</div>
+								<div class="hovv">
+									
 								</div>
 							</div>
 						</td>
 						<td class="Td2">
 							<div class="Cell">
-								<div class="imgT"><img src="Content/1.png"></div>
+								<div class="imgT">
+									<img src="Content/1.png">
+								</div>
 								<div class="info">
 									<h1>Antoine Toustou</h1>
 									<p>Электроника и Тромбон</p>
@@ -97,7 +110,9 @@
 						</td>
 						<td class="Td3">
 							<div class="Cell">
-								<div class="imgT"><img src="Content/2.jpg"></div>
+								<div class="imgT">
+									<img src="Content/2.jpg">
+								</div>
 								<div class="info">
 									<h1>Hugues Payen</h1>
 									<p>Скрипка</p>
@@ -108,7 +123,9 @@
 					<tr class="Tr2">
 						<td class="Td1">
 							<div class="Cell">
-								<div class="imgT"><img src="Content/3.jpg"></div>
+								<div class="imgT">
+									<img src="Content/3.jpg">
+								</div>
 								<div class="info">
 									<h1>Arnaud Vial</h1>
 									<p>Гитара</p>
@@ -117,7 +134,9 @@
 						</td>
 						<td class="Td2">
 							<div class="Cell">
-								<div class="imgT"><img src="Content/4.jpg"></div>
+								<div class="imgT">
+									<img src="Content/4.jpg">
+								</div>
 								<div class="info">
 									<h1>Charles Delaporte</h1>
 									<p>Контрабас</p>
@@ -126,7 +145,9 @@
 						</td>
 						<td class="Td3">
 							<div class="Cell">
-								<div class="imgT"><img src="Content/5.png"></div>
+								<div class="imgT">
+									<img src="Content/5.png">
+								</div>
 								<div class="info">
 									<h1>Camille Chapelière</h1>
 									<p>Кларнет и Саксофон</p>
