--- a/Gallery.html
+++ b/Gallery.html
@@ -2,10 +2,10 @@
 	<html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Caravan Palace</title>
+		<title>Галерея</title>
+		<link href="../font/DidactGothic-Regular.ttf" rel="stylesheet"> 
 		<link rel="stylesheet" type="text/css" href="Galstyle.css">
-		<!-- <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Roboto+Slab&display=swap" rel="stylesheet"> 
-	</head> -->
+	</head>
 	<body>
 		<header>
 			<img class="logo" src="index_files/CaravanLogo.png">
