--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Caravan Palace</title>
+		<link href="../font/DidactGothic-Regular.ttf" rel="stylesheet"> 
 		<link rel="stylesheet" type="text/css" href="ramstyle.css">
-		<!-- <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Roboto+Slab&display=swap" rel="stylesheet">  -->
 	</head>
 	<body>
 		<header>
