--- a/info_about.html
+++ b/info_about.html
@@ -5,7 +5,7 @@
 		<title>О нас</title>
 		<link href="../font/DidactGothic-Regular.ttf" rel="stylesheet"> 
 		<link rel="stylesheet" type="text/css" href="infstyle.css">
-		-->	</head>
+	</head>
 		<body>
 			<header>
 				<img class="logo" src="index_files/CaravanLogo.png">
