--- a/index.html
+++ b/index.html
@@ -14,17 +14,19 @@
         <nav class="top-menu">
             <ul class="menu-main">
                 <li class="left-item"><a href="Caravan_Palace/index.html">Caravan Palace</a></li>
+                <li class="left-item"><a href="#">NO_Fantasy corp.</a></li>
             </ul>
         </nav>
     </header>
-    <footer>
-        <div class="git">
-            <a href="https://github.com/SkripMen/skripmen.github.io">При поддержки:
-                <img class="github" src="https://www.stickpng.com/assets/images/5847f98fcef1014c0b5e48c0.png" alt="">
-            </a>
+    <div class="links">Cсылки:</div>
+    <div class="git">
 
-        </div>
-    </footer>
+        <a href="https://github.com/SkripMen/skripmen.github.io">
+            <img class="github" src="gitHub.png" alt="">
+        </a>
+
+    </div>
+
 
 </body>
 
