--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <a href="https://github.com/SkripMen/skripmen.github.io">
             <img class="github" src="gitHub.png" alt="">
         </a>
+        <a href="vk/index.html">
+            <img class="vk" src="VK.png" alt="">
+        </a>
 
     </div>
 
