--- a/404/index.html
+++ b/404/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Vk.com</title>
     <link rel="stylesheet" href="style.css">
+    <title>Меня тут нету</title>
 </head>
 
 <body>
-
+    <div class="content">Здесь пока ничего нет, но это пока...
+    </div>
 </body>
 
 </html>
