--- a/index.html
+++ b/index.html
@@ -13,20 +13,25 @@
     <header>
         <nav class="top-menu">
             <ul class="menu-main">
-                <li class="left-item"><a href="Caravan_Palace/index.html">Caravan Palace</a></li>
-                <li class="left-item"><a href="#">NO_Fantasy corp.</a></li>
+                <li class="left-item"><a href="sait/Caravan_Palace/index.html">Caravan Palace</a></li>
+                <li class="left-item"><a href="404/index.html">WebHub</a></li>
             </ul>
         </nav>
     </header>
-    <div class="git">
+    <div class="links">
 
-        <a href="https://github.com/SkripMen/skripmen.github.io">
-            <img class="github" src="gitHub.png" alt="">
+        <a target="_blank" href="https://github.com/SkripMen/skripmen.github.io">
+            <img class="github" src="img/gitHub.png" alt="">
         </a>
-        <a href="vk/index.html">
-            <img class="vk" src="VK.png" alt="">
+        <a href="404/index.html">
+            <img class="vk" src="img/VK.png" alt="">
         </a>
 
+    </div>
+    <div class="sozd">
+        <a target="_blank" href="https://vk.com/skrip_men">
+            <img class="skrip_men" src="img/sm.png" alt="">
+        </a>
     </div>
 
 
