--- a/sait/Caravan_Palace/index.html
+++ b/sait/Caravan_Palace/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Caravan Palace</title>
     <link href="../font/DidactGothic-Regular.ttf" rel="stylesheet">
+    <link rel="shortcut icon" href="index_files/cp-ico.png" type="image/x-coin">
     <link rel="stylesheet" type="text/css" href="ramstyle.css">
 </head>
 
@@ -72,9 +73,9 @@
         </div>
         <div class="border">
             <div class="texts">
-                <img class="image1" src="index_files/R-8046368-1454108735-5686.png">Caravan Palace — французская музыкальная группа, играющая в жанре электро-свинг. В настоящее время в состав группы входят: Sonia Fernandez Velasco (вокал и кларнет), Arnaud
-                Vial (гитара), Hugues Payen (скрипка), Camille Chapelière (кларнет), Charles Delaporte (контрабас) и Antoine Toustou (электроника и тромбон). Группа была основана в 2005 году после того, как три участника группы были наняты кинокомпанией
-                для создания саундтрека. В октябре 2008 года компанией Wagram Music был выпущен дебютный альбом группы — Caravan Palace. Запись появилась в чартах Швейцарии, Бельгии и Франции и достигла 11 места.
+                <img class="image1" src="index_files/logo.png">Caravan Palace — французская музыкальная группа, играющая в жанре электро-свинг. В настоящее время в состав группы входят: Sonia Fernandez Velasco (вокал и кларнет), Arnaud Vial (гитара),
+                Hugues Payen (скрипка), Camille Chapelière (кларнет), Charles Delaporte (контрабас) и Antoine Toustou (электроника и тромбон). Группа была основана в 2005 году после того, как три участника группы были наняты кинокомпанией для создания
+                саундтрека. В октябре 2008 года компанией Wagram Music был выпущен дебютный альбом группы — Caravan Palace. Запись появилась в чартах Швейцарии, Бельгии и Франции и достигла 11 места.
             </div>
         </div>
         <h1>Состав</h1>
