--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" href="img/sm.png" type="image/x-coin">
     <link rel="stylesheet" href="stile.css">
     <title>Menu</title>
 </head>
@@ -14,7 +15,7 @@
         <nav class="top-menu">
             <ul class="menu-main">
                 <li class="left-item"><a href="sait/Caravan_Palace/index.html">Caravan Palace</a></li>
-                <li class="left-item"><a href="404/index.html">WebHub</a></li>
+                <li class="left-item"><a href="error/index.html">WebHub</a></li>
             </ul>
         </nav>
     </header>
@@ -23,7 +24,7 @@
         <a target="_blank" href="https://github.com/SkripMen/skripmen.github.io">
             <img class="github" src="img/gitHub.png" alt="">
         </a>
-        <a href="404/index.html">
+        <a href="error/index.html">
             <img class="vk" src="img/VK.png" alt="">
         </a>
 
