--- a/sait/Caravan_Palace/index.html
+++ b/sait/Caravan_Palace/index.html
@@ -28,12 +28,12 @@
                         </a>
                     </li>
                     <li class="navi">
-                        <a class="but" href="#">
+                        <a class="but" href="http://skripmen.github.io/sait/Caravan_Palace/bit">
                             <div class="data-col">Тур</div>
                         </a>
                     </li>
                     <li class="navi">
-                        <a class="but" href="#">
+                        <a class="but" href="http://skripmen.github.io/sait/Caravan_Palace/bit">
                             <div class="data-col">Магазин</div>
                         </a>
                     </li>
