--- a/404.html
+++ b/404.html
@@ -11,8 +11,9 @@
 </head>
 
 <body>
-    <div class="content">Здесь пока ничего нет, но это пока...
+    <div class="content">Error 404...
     </div>
+    <div class="content">Похоже что вы где-то потерялись</div>
 </body>
 
 </html>
