--- a/404.html
+++ b/404.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-    <div class="content">Error 404...
-    </div>
+    <h1>Error 404...
+    </h1>
     <div class="content">Похоже что вы где-то потерялись</div>
 </body>
 
