--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="top-menu">
             <ul class="menu-main">
                 <li class="left-item"><a href="sait/Caravan_Palace/index.html">Caravan Palace</a></li>
-                <li class="left-item"><a href="http://skripmen.github.io/bit">WebHub</a></li>
+                <li class="left-item"><a href="bit">WebHub</a></li>
             </ul>
         </nav>
     </header>
@@ -24,7 +24,7 @@
         <a target="_blank" href="https://github.com/SkripMen/skripmen.github.io">
             <img class="github" src="img/gitHub.png" alt="">
         </a>
-        <a href="http://skripmen.github.io/bit">
+        <a href="bit">
             <img class="vk" src="img/VK.png" alt="">
         </a>
 
