--- a/404.html
+++ b/404.html
@@ -11,9 +11,12 @@
 </head>
 
 <body>
-    <h1>Error 404...
-    </h1>
-    <div class="content">Похоже что вы где-то потерялись</div>
+
+    <img src="error/404.png" alt="">
+    <h1>Error 404...</h1>
+    <div class="content">Похоже что вы где-то потерялись...</div>
+
+
 </body>
 
 </html>
