--- a/sait/Caravan_Palace/index.html
+++ b/sait/Caravan_Palace/index.html
@@ -28,12 +28,12 @@
                         </a>
                     </li>
                     <li class="navi">
-                        <a class="but" href="tur.html">
+                        <a class="but" href="#">
                             <div class="data-col">Тур</div>
                         </a>
                     </li>
                     <li class="navi">
-                        <a class="but" href="shop.html">
+                        <a class="but" href="#">
                             <div class="data-col">Магазин</div>
                         </a>
                     </li>
