--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 
     <img src="error/404.png" alt="">
     <h1>Error 404...</h1>
-    <div class="content">Похоже что вы где-то потерялись...</div>
+    <div class="content">Похоже, что вы где-то потерялись...</div>
 
 
 </body>
