--- a/sait/Caravan_Palace/info_about.html
+++ b/sait/Caravan_Palace/info_about.html
@@ -38,6 +38,11 @@
                         </a>
                     </li>
                     <li class="navi">
+                        <a class="but" href="#">
+                            <div class="data-col">Музыка</div>
+                        </a>
+                    </li>
+                    <li class="navi">
                         <a class="but" href="info_about.html">
                             <div class="data-col">О нас</div>
                         </a>
