--- a/error/404.html
+++ b/error/404.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <img src="error/404.png" alt="">
+    <img src="404.png" alt="">
     <h1>Error 404...</h1>
     <div class="content">Похоже, что вы где-то потерялись...</div>
 
