Updata Caravan Palase 2

--- a/sait/Caravan_Palace/index.html
+++ b/sait/Caravan_Palace/index.html
@@ -6,7 +6,7 @@
     <title>Caravan Palace</title>
     <link href="../font/DidactGothic-Regular.ttf" rel="stylesheet">
     <link rel="shortcut icon" href="index_files/cp-ico.png" type="image/x-coin">
-    <link rel="stylesheet" type="text/css" href="ramstyle.css">
+    <link rel="stylesheet" type="text/css" href="css/ramstyle.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
                         </a>
                     </li>
                     <li class="navi">
-                        <a class="but" href="Gallery.html">
+                        <a class="but" href="html/Gallery.html">
                             <div class="data-col">Галерея</div>
                         </a>
                     </li>
@@ -43,7 +43,7 @@
                         </a>
                     </li>
                     <li class="navi">
-                        <a class="but" href="info_about.html">
+                        <a class="but" href="html/info_about.html">
                             <div class="data-col">О нас</div>
                         </a>
                     </li>
