--- a/sait/Caravan_Palace/html/info_about.html
+++ b/sait/Caravan_Palace/html/info_about.html
@@ -6,19 +6,19 @@
     <title>О нас</title>
     <link href="../font/DidactGothic-Regular.ttf" rel="stylesheet">
     <link rel="shortcut icon" href="index_files/cp-ico.png" type="image/x-coin">
-    <link rel="stylesheet" type="text/css" href="infstyle.css">
+    <link rel="stylesheet" type="text/css" href="../css/infstyle.css">
 </head>
 
 <body>
     <header>
-        <img class="logo" src="index_files/CaravanLogo.png">
+        <img class="logo" src="../index_files/CaravanLogo.png">
     </header>
     <div class="navigation">
         <div class="Line">
             <nav>
                 <ul>
                     <li class="navi">
-                        <a class="but" href="index.html">
+                        <a class="but" href="../index.html">
                             <div class="data-col">Главная</div>
                         </a>
                     </li>
@@ -54,9 +54,11 @@
     <div class="content">
         <div class="border">
             <div class="texts">
-                Caravan Palace — французская музыкальная группа, играющая в жанре электро-свинг. В настоящее время в состав группы входят: Sonia Fernandez Velasco (вокал и кларнет), Arnaud Vial (гитара), Hugues Payen (скрипка), Camille Chapelière (кларнет), Charles Delaporte
-                (контрабас) и Antoine Toustou (электроника и тромбон). Группа была основана в 2005 году после того, как три участника группы были наняты кинокомпанией для создания саундтрека. В октябре 2008 года компанией Wagram Music был выпущен дебютный
-                альбом группы — Caravan Palace. Запись появилась в чартах Швейцарии, Бельгии и Франции и достигла 11 места.
+                <p>
+                    Caravan Palace — французская музыкальная группа, играющая в жанре электро-свинг. В настоящее время в состав группы входят: Sonia Fernandez Velasco (вокал и кларнет), Arnaud Vial (гитара), Hugues Payen (скрипка), Camille Chapelière (кларнет), Charles Delaporte
+                    (контрабас) и Antoine Toustou (электроника и тромбон). Группа была основана в 2005 году после того, как три участника группы были наняты кинокомпанией для создания саундтрека. В октябре 2008 года компанией Wagram Music был выпущен
+                    дебютный альбом группы — Caravan Palace. Запись появилась в чартах Швейцарии, Бельгии и Франции и достигла 11 места.
+                </p>
                 <p>
                     Впервые члены группы встретились в 2005 году Группа была создана через год после встречи с музыкальным продюсером Loïc Barrouk, он проявил интерес к этому проекту, зарегистрировав группу в звукозаписывающей студии и организовав несколько концертов.
                 </p>
@@ -64,12 +66,16 @@
                     Группа получила популярность в интернете благодаря нескольким демо и промозаписям. С 2006 по 2007 год они провели в концертном туре по Франции, также в 2007 году они впервые выступили на музыкальном фестивале, это был Django Reinhardt Jazz Festival. После
                     этого в Парижской студии звукозаписи Wagram Music группа записала свой первый альбом.
                 </p>
-                20 октября 2008 года альбом, названый Caravan Palace, был выпущен. Альбом получил признание for its traditional jazz inclinations и был включен в некоторые европейские чарты. В Швейцарии альбом занял 72 место, в Бельгии 42. Альбом стал лучшей отечественной
-                группой Франции и занял 11 место в августе 2009 года и оставался во Французском национальном чарте альбомов (Syndicat National de l'Édition Phonographique) на протяжении 69 недель.
+                <p>
+                    20 октября 2008 года альбом, названый Caravan Palace, был выпущен. Альбом получил признание for its traditional jazz inclinations и был включен в некоторые европейские чарты. В Швейцарии альбом занял 72 место, в Бельгии 42. Альбом стал лучшей отечественной
+                    группой Франции и занял 11 место в августе 2009 года и оставался во Французском национальном чарте альбомов (Syndicat National de l'Édition Phonographique) на протяжении 69 недель.
+                </p>
                 <p>
                     Группа выпустила второй официальный сингл "Suzy" 24 февраля 2009 года.
                 </p>
-                После более чем годичного перерыва 3 октября 2011 года у них вышел мини-альбом Clash. А 5 марта 2012 года группа выпускает второй студийный альбом Panic.
+                <p>
+                    После более чем годичного перерыва 3 октября 2011 года у них вышел мини-альбом Clash. А 5 марта 2012 года группа выпускает второй студийный альбом Panic.
+                </p>
                 <p>
                     19 июня 2019 на своей официальной странице YouTube группа опубликовала тизер нового альбома "Chronologic", выход которого состоялся 30 августа 2019.
                 </p>
@@ -82,7 +88,7 @@
                     <td class="Td1">
                         <div class="Cell">
                             <div class="imgT">
-                                <img src="Content/6.jpg">
+                                <img src="../Content/6.jpg">
                             </div>
                             <div class="info">
                                 <h1>Colotis Zoé</h1>
@@ -97,7 +103,7 @@
                     <td class="Td2">
                         <div class="Cell">
                             <div class="imgT">
-                                <img src="Content/1.png">
+                                <img src="../Content/1.png">
                             </div>
                             <div class="info">
                                 <h1>Antoine Toustou</h1>
@@ -112,7 +118,7 @@
                     <td class="Td3">
                         <div class="Cell">
                             <div class="imgT">
-                                <img src="Content/2.jpg">
+                                <img src="../Content/2.jpg">
                             </div>
                             <div class="info">
                                 <h1>Hugues Payen</h1>
@@ -129,7 +135,7 @@
                     <td class="Td1">
                         <div class="Cell">
                             <div class="imgT">
-                                <img src="Content/3.jpg">
+                                <img src="../Content/3.jpg">
                             </div>
                             <div class="info">
                                 <h1>Arnaud Vial</h1>
@@ -144,7 +150,7 @@
                     <td class="Td2">
                         <div class="Cell">
                             <div class="imgT">
-                                <img src="Content/4.jpg">
+                                <img src="../Content/4.jpg">
                             </div>
                             <div class="info">
                                 <h1>Charles Delaporte</h1>
@@ -159,7 +165,7 @@
                     <td class="Td3">
                         <div class="Cell">
                             <div class="imgT">
-                                <img src="Content/5.png">
+                                <img src="../Content/5.png">
                             </div>
                             <div class="info">
                                 <h1>Camille Chapelière</h1>
@@ -179,9 +185,9 @@
     <footer>
         <div class="Footer">
             <div>© 2019 «Caravan Palace».</div>
-            <a target="_blank" href="https://vk.com/caravanpalace"><img src="Content/Vk.png"></a>
-            <a target="_blank" href="https://www.facebook.com/CaravanPalace"><img src="Content/face.png"></a>
-            <a target="_blank" href="https://twitter.com/caravanpalace"><img src="Content/Twi.png"></a>
+            <a target="_blank" href="https://vk.com/caravanpalace"><img src="../Content/Vk.png"></a>
+            <a target="_blank" href="https://www.facebook.com/CaravanPalace"><img src="../Content/face.png"></a>
+            <a target="_blank" href="https://twitter.com/caravanpalace"><img src="../Content/Twi.png"></a>
         </div>
     </footer>
 </body>
