Update Caravan Palace Media

--- a/sait/Caravan_Palace/html/Gallery.html
+++ b/sait/Caravan_Palace/html/Gallery.html
@@ -29,7 +29,7 @@
                         </a>
                     </li>
                     <li class="navi">
-                        <a class="but" href="#">
+                        <a class="but" href="Tour.html">
                             <div class="data-col">Тур</div>
                         </a>
                     </li>
@@ -39,8 +39,8 @@
                         </a>
                     </li>
                     <li class="navi">
-                        <a class="but" href="#">
-                            <div class="data-col">Музыка</div>
+                        <a class="but" href="media.html">
+                            <div class="data-col">Медиа</div>
                         </a>
                     </li>
                     <li class="navi">
@@ -95,7 +95,7 @@
             </div>
         </div>
         <div id="fullimage" style="width: 100vw; height: 100vh; position: fixed;left: 0px;top: 0px; background-color: #000d; visibility:hidden; padding: 5vmin" onclick="{ToggleFullImage(''); }">
-            <img id="fullimageimg" src="../Content/Gallery/13.jpg" style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+            <img id="fullimageimg" src="../Content/Gallery/13.jpg" style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); height: 85%; width: auto;">
         </div>
     </div>
 </body>
