--- a/sait/Caravan_Palace/index.html
+++ b/sait/Caravan_Palace/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="UTF-8">
     <title>Caravan Palace</title>
@@ -28,7 +27,7 @@
                         </a>
                     </li>
                     <li class="navi">
-                        <a class="but" href="#">
+                        <a class="but" href="html/Tour.html">
                             <div class="data-col">Тур</div>
                         </a>
                     </li>
@@ -38,8 +37,8 @@
                         </a>
                     </li>
                     <li class="navi">
-                        <a class="but" href="#">
-                            <div class="data-col">Музыка</div>
+                        <a class="but" href="html/media.html">
+                            <div class="data-col">Медиа</div>
                         </a>
                     </li>
                     <li class="navi">
