--- a/sait/Caravan_Palace/html/info_about.html
+++ b/sait/Caravan_Palace/html/info_about.html
@@ -28,7 +28,7 @@
                         </a>
                     </li>
                     <li class="navi">
-                        <a class="but" href="#">
+                        <a class="but" href="Tour.html">
                             <div class="data-col">Тур</div>
                         </a>
                     </li>
@@ -38,8 +38,8 @@
                         </a>
                     </li>
                     <li class="navi">
-                        <a class="but" href="#">
-                            <div class="data-col">Музыка</div>
+                        <a class="but" href="media.html">
+                            <div class="data-col">Медиа</div>
                         </a>
                     </li>
                     <li class="navi">
