Update Caravan Palace Tiur

--- a/sait/Caravan_Palace/html/Tour.html
+++ b/sait/Caravan_Palace/html/Tour.html
@@ -50,33 +50,127 @@
         </div>
     </div>
     <div class="content">
-         <table>
-                <tr>
-                    <td>                        
-                    </td>
-                    <td>                        
-                    </td>
-                    <td>                        
-                    </td>
-                </tr>
-                <tr>
-                    <td>                        
-                    </td>
-                    <td>                    
-                    </td>
-                    <td>                        
-                    </td>
-                </tr>
-            </table>
+       <table>
+        <tr>
+            <td class="Data">
+                Дата концерта                        
+            </td>
+            <td class="Place">
+                Место проведения
+            </td>
+            <td class="Ticket">
+                Билеты                  
+            </td>
+        </tr>
+        <tr>
+            <td class="Data">
+                21 Января 2020г
+            </td>
+            <td class="Place">
+                Ирландия, г. Дублин, Vicar Street
+            </td>
+            <td class="Ticket">
+                <a target="_blank" href="https://www.songkick.com/concerts/38849079-caravan-palace-at-vicar-street?utm_source=11593&utm_medium=partner&utm_campaign=widget&utm_content=603864">Купить билет</a>                        
+            </td>
+        </tr>
+        <tr>
+            <td class="Data">
+                23 Января 2020г
+            </td>
+            <td class="Place">
+                Великобритания, г. Глазго, 02 Academy Glasgow
+            </td>
+            <td class="Ticket">
+                <a target="_blank" href="https://www.songkick.com/concerts/38854914-caravan-palace-at-o2-academy-glasgow?utm_source=11593&utm_medium=partner&utm_campaign=widget&utm_content=603864">Купить билет</a>                        
+            </td>
+        </tr>
+        <tr>
+            <td class="Data">
+                24 Января 2020г
+            </td>
+            <td class="Place">
+                Великобритания, г. Лидс, 02 Academy Leeds
+            </td>
+            <td class="Ticket">
+                <a target="_blank" href="https://www.songkick.com/concerts/38850809-caravan-palace-at-o2-academy-leeds?utm_source=11593&utm_medium=partner&utm_campaign=widget&utm_content=603864">Купить билет</a>                        
+            </td>
+        </tr>
+        <tr>
+            <td class="Data">
+                25 Января 2020г
+            </td>
+            <td class="Place">
+                Великобритания, г. Кембридж, Cambridge Corn Exchange
+            </td>
+            <td class="Ticket">
+                <a target="_blank" href="https://www.songkick.com/concerts/38867044-caravan-palace-at-cambridge-corn-exchange?utm_source=11593&utm_medium=partner&utm_campaign=widget&utm_content=603864">Купить билет</a>                        
+            </td>
+        </tr>
+        <tr>
+            <td class="Data">
+                27 Января 2020г
+            </td>
+            <td class="Place">
+                Великобритания, г. Бристоль, 02 Academy Bristol
+            </td>
+            <td class="Ticket">
+                <a target="_blank" href="https://www.songkick.com/concerts/38843759-caravan-palace-at-o2-academy-bristol?utm_source=11593&utm_medium=partner&utm_campaign=widget&utm_content=603864">Купить билет</a>                        
+            </td>
+        </tr>
+        <tr>
+            <td class="Data">
+                28 Января 2020г
+            </td>
+            <td class="Place">
+                Великобритания, г. Бексхиллы-на-море, De La Warr Pavilion
+            </td>
+            <td class="Ticket">
+                <a target="_blank" href="https://www.songkick.com/concerts/38867054-caravan-palace-at-de-la-warr-pavilion?utm_source=11593&utm_medium=partner&utm_campaign=widget&utm_content=603864">Купить билет</a>                        
+            </td>
+        </tr>
+        <tr>
+            <td class="Data">
+                30 Января 2020г
+            </td>
+            <td class="Place">
+                Великобритания, г. Брикстон, 02 Academy Brixton
+            </td>
+            <td class="Ticket">
+                <a target="_blank" href="https://www.songkick.com/concerts/38850989-caravan-palace-at-o2-academy-brixton?utm_source=11593&utm_medium=partner&utm_campaign=widget&utm_content=603864">Купить билет</a>                        
+            </td>
+        </tr>
+        <tr>
+            <td class="Data">
+                31 Января 2020г
+            </td>
+            <td class="Place">
+                Великобритания, г. Манчестер, Albert Hall
+            </td>
+            <td class="Ticket">
+                <a target="_blank" href="https://www.songkick.com/concerts/38867064-caravan-palace-at-albert-hall?utm_source=11593&utm_medium=partner&utm_campaign=widget&utm_content=603864">Купить билет</a>                        
+            </td>
+        </tr>
+        <tr>
+            <td class="Data">
+                1 Февраля 2020г
+            </td>
+            <td class="Place">
+                Великобритания, г. Бирмингем, 02 Academy Birmingham
+            </td>
+            <td class="Ticket">
+                <a target="_blank" href="https://www.songkick.com/concerts/38850874-caravan-palace-at-o2-academy-birmingham?utm_source=11593&utm_medium=partner&utm_campaign=widget&utm_content=603864">Купить билет</a>                        
+            </td>
+        </tr>
+    </table>
+</div>
+<footer>
+    <div class="Footer">
+        <div>© 2019 «Caravan Palace».</div>
+        <a target="_blank" href="https://vk.com/caravanpalace"><img src="../Content/Vk.png"></a>
+        <a target="_blank" href="https://www.facebook.com/CaravanPalace"><img src="../Content/face.png"></a>
+        <a target="_blank" href="https://twitter.com/caravanpalace"><img src="../Content/Twi.png"></a>
     </div>
-    <footer>
-        <div class="Footer">
-            <div>© 2019 «Caravan Palace».</div>
-            <a target="_blank" href="https://vk.com/caravanpalace"><img src="../Content/Vk.png"></a>
-            <a target="_blank" href="https://www.facebook.com/CaravanPalace"><img src="../Content/face.png"></a>
-            <a target="_blank" href="https://twitter.com/caravanpalace"><img src="../Content/Twi.png"></a>
-        </div>
-    </footer>
+</footer>
 </body>
 
 </html>
